welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: '(' expected but 'if' found.
  if if (getCouleurSol() == Color.green) {
     ^