welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var vert: Boolean = false;
  avance()
  if if (getCouleurSol() == Color.green) {
    vert = true }
	
  return vert
  }